--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       </header>
     </nav>
 
-    <main class="content">
-      <div class="grid-container">
-        <section class="product" id="astronaut">
+    <main>
+      <section class="posters">
+        <article class="product-card" id="astronaut">
           <img
             class="poster-pic"
             src="assets/char-1.png"
@@ -35,9 +35,9 @@
             asperiores beatae iste qui temporibus autem?
           </p>
           <button aria-label="Add astronaut to cart">Oh, take my money!</button>
-        </section>
+        </article>
 
-        <section class="product" id="ninja">
+        <article class="product-card" id="ninja">
           <img class="poster-pic" src="assets/char-2.png" alt="Ninja poster" />
           <h2>Ninja</h2>
           <p>
@@ -45,9 +45,9 @@
             nemo dolorum ab eum et, aut architecto?
           </p>
           <button aria-label="Add ninja to cart">Oh, take my money!</button>
-        </section>
+        </article>
 
-        <section class="product" id="nerd">
+        <article class="product-card" id="nerd">
           <img class="poster-pic" src="assets/char-3.png" alt="Nerd poster" />
           <h2>Nerd</h2>
           <p>
@@ -55,9 +55,9 @@
             quod autem ullam expedita minima.
           </p>
           <button aria-label="Add nerd to cart">Oh, take my money!</button>
-        </section>
+        </article>
 
-        <section class="product" id="doctor">
+        <article class="product-card" id="doctor">
           <img
             class="poster-pic"
             src="assets/char-11.png"
@@ -69,9 +69,9 @@
             voluptates. Quisquam, voluptates.
           </p>
           <button aria-label="Add doctor to cart">Oh, take my money!</button>
-        </section>
+        </article>
 
-        <section class="product" id="guitarist">
+        <article class="product-card" id="guitarist">
           <img
             class="poster-pic"
             src="assets/char-12.png"
@@ -83,9 +83,9 @@
             dolorem consectetur laborum voluptates placeat quam!
           </p>
           <button aria-label="Add guitarist to cart">Oh, take my money!</button>
-        </section>
+        </article>
 
-        <section class="product" id="snorkeler">
+        <article class="product-card" id="snorkeler">
           <img
             class="poster-pic"
             src="assets/char-4.png"
@@ -97,9 +97,9 @@
             at illo nulla perferendis suscipit qui vel.
           </p>
           <button aria-label="Add snorkeler to cart">Oh, take my money!</button>
-        </section>
+        </article>
 
-        <section class="product" id="clown">
+        <article class="product-card" id="clown">
           <img class="poster-pic" src="assets/char-5.png" alt="Clown poster" />
           <h2>Clown</h2>
           <p>
@@ -107,9 +107,9 @@
             suscipit minus itaque impedit obcaecati aspernatur laborum.
           </p>
           <button aria-label="Add clown to cart">Oh, take my money!</button>
-        </section>
+        </article>
 
-        <section class="product" id="police">
+        <article class="product-card" id="police">
           <img class="poster-pic" src="assets/char-6.png" alt="Police poster" />
           <h2>Polis</h2>
           <p>
@@ -117,9 +117,9 @@
             eligendi placeat dolorum adipisci ducimus sint iure suscipit.
           </p>
           <button aria-label="Add police to cart">Oh, take my money!</button>
-        </section>
+        </article>
 
-        <section class="product" id="fairy">
+        <article class="product-card" id="fairy">
           <img class="poster-pic" src="assets/char-8.png" alt="Fairy poster" />
           <h2>Fe</h2>
           <p>
@@ -128,11 +128,11 @@
             perspiciatis.
           </p>
           <button aria-label="Add fairy to cart">Oh, take my money!</button>
-        </section>
+        </article>
 
-        <section class="product" id="photographer">
+        <article class="product-card-special" id="photographer">
           <img
-            class="poster-pic"
+            class="poster-pic-special"
             src="assets/char-7.png"
             alt="Photographer poster"
           />
@@ -144,11 +144,11 @@
           <button aria-label="Add photographer to cart">
             Oh, take my money!
           </button>
-        </section>
+        </article>
 
-        <section class="product" id="pt">
+        <article class="product-card-special" id="pt">
           <img
-            class="poster-pic"
+            class="poster-pic-special"
             src="assets/char-9.png"
             alt="Personal trainer poster"
           />
@@ -160,8 +160,8 @@
           <button aria-label="Add personal trainer to cart">
             Oh, take my money!
           </button>
-        </section>
-      </div>
+        </article>
+      </section>
     </main>
 
     <footer>
@@ -175,6 +175,7 @@
           </ul>
         </nav>
       </section>
+
       <section class="footer-address">
         <h3>Address</h3>
         <address>
