finished styling for index page

--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
             alt="Astronaut poster"
           />
           <h2>Astronaut</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate
-            asperiores beatae iste qui temporibus autem?
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore explicabo nulla, veritatis consequuntur corporis nam!
           </p>
           <button aria-label="Add astronaut to cart">Oh, take my money!</button>
         </article>
@@ -40,9 +38,7 @@
         <article class="product-card" id="ninja">
           <img class="poster-pic" src="assets/char-2.png" alt="Ninja poster" />
           <h2>Ninja</h2>
-          <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel ipsam
-            nemo dolorum ab eum et, aut architecto?
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis neque recusandae, aperiam numquam iure ipsa.
           </p>
           <button aria-label="Add ninja to cart">Oh, take my money!</button>
         </article>
@@ -50,9 +46,7 @@
         <article class="product-card" id="nerd">
           <img class="poster-pic" src="assets/char-3.png" alt="Nerd poster" />
           <h2>Nerd</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat
-            quod autem ullam expedita minima.
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure repudiandae aliquam eius aut. Temporibus, deleniti.
           </p>
           <button aria-label="Add nerd to cart">Oh, take my money!</button>
         </article>
@@ -64,9 +58,7 @@
             alt="Doctor poster"
           />
           <h2>Läkare</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
-            voluptates. Quisquam, voluptates.
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur ipsum laboriosam placeat sed numquam in?
           </p>
           <button aria-label="Add doctor to cart">Oh, take my money!</button>
         </article>
@@ -78,9 +70,7 @@
             alt="Guitarist poster"
           />
           <h2>Gitarrknäppare</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed ullam
-            dolorem consectetur laborum voluptates placeat quam!
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae corrupti enim maxime natus ipsa dolorem.
           </p>
           <button aria-label="Add guitarist to cart">Oh, take my money!</button>
         </article>
@@ -92,9 +82,7 @@
             alt="Snorkeler poster"
           />
           <h2>Snorklare</h2>
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique
-            at illo nulla perferendis suscipit qui vel.
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, cupiditate neque? Itaque eum natus veritatis?
           </p>
           <button aria-label="Add snorkeler to cart">Oh, take my money!</button>
         </article>
@@ -103,8 +91,7 @@
           <img class="poster-pic" src="assets/char-5.png" alt="Clown poster" />
           <h2>Clown</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod
-            suscipit minus itaque impedit obcaecati aspernatur laborum.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. At et obcaecati earum laudantium? Dolores, illo?
           </p>
           <button aria-label="Add clown to cart">Oh, take my money!</button>
         </article>
@@ -113,8 +100,7 @@
           <img class="poster-pic" src="assets/char-6.png" alt="Police poster" />
           <h2>Polis</h2>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio
-            eligendi placeat dolorum adipisci ducimus sint iure suscipit.
+            Lorem ipsum dolor sit amet, adipisicing elit. Voluptate necessitatibus praesentium consequatur. Tenetur, ipsam quaerat.
           </p>
           <button aria-label="Add police to cart">Oh, take my money!</button>
         </article>
@@ -122,10 +108,7 @@
         <article class="product-card" id="fairy">
           <img class="poster-pic" src="assets/char-8.png" alt="Fairy poster" />
           <h2>Fe</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque,
-            veritatis? Saepe modi deserunt provident sequi adipisci animi
-            perspiciatis.
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet atque eligendi debitis, provident distinctio et.
           </p>
           <button aria-label="Add fairy to cart">Oh, take my money!</button>
         </article>
@@ -138,8 +121,7 @@
           />
           <h2>Fotograf</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae
-            sit nam veniam sed error, quasi temporibus necessitatibus.
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor tempora possimus, harum impedit nesciunt itaque!
           </p>
           <button aria-label="Add photographer to cart">
             Oh, take my money!
@@ -154,8 +136,7 @@
           />
           <h2>Personlig tränare</h2>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus
-            consectetur officia natus eligendi minima eveniet eos id obcaecati.
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos inventore deserunt enim quod aspernatur aliquid.
           </p>
           <button aria-label="Add personal trainer to cart">
             Oh, take my money!
@@ -165,49 +146,51 @@
     </main>
 
     <footer>
-      <section class="footer-nav">
-        <nav>
-          <h3>Nav</h3>
-          <ul>
-            <li><a href="#">Products</a></li>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Contact</a></li>
-          </ul>
-        </nav>
-      </section>
+      <div class="footer-container">
+        <section class="footer-nav">
+          <nav>
+            <h3>Nav</h3>
+            <ul>
+              <li><a href="#">Products</a></li>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+          </nav>
+        </section>
 
-      <section class="footer-address">
-        <h3>Address</h3>
-        <address>
-          <p>Plinkeplonkvägen 32</p>
-          <p>888 81 Klonkberga</p>
-        </address>
-      </section>
-      <section class="footer-social">
-        <h3>Social Media</h3>
-        <ul>
-          <li>
-            <a href="https://x.com" aria-label="Visit our x">
-              <img src="assets/logo-twitter.svg" alt="X icon" />
-            </a>
-          </li>
-          <li>
-            <a href="https://facebook.com" aria-label="Visit our facebook">
-              <img src="assets/logo-facebook.svg" alt="Facebook icon" />
-            </a>
-          </li>
-          <li>
-            <a href="https://linkedin.com" aria-label="Visit our linkedIn">
-              <img src="assets/logo-linkedin.svg" alt="Linkedin icon" />
-            </a>
-          </li>
-          <li>
-            <a href="https://instagram.com" aria-label="Visit our instagram">
-              <img src="assets/logo-instagram.svg" alt="Instagram icon" />
-            </a>
-          </li>
-        </ul>
-      </section>
+        <section class="footer-address">
+          <h3>Address</h3>
+          <address>
+            <p>Plinkeplonkvägen 32</p>
+            <p>888 81 Klonkberga</p>
+          </address>
+        </section>
+        <section class="footer-social">
+          <h3>Social Media</h3>
+          <ul>
+            <li>
+              <a href="https://x.com" aria-label="Visit our x">
+                <img src="assets/logo-twitter.svg" alt="X icon" />
+              </a>
+            </li>
+            <li>
+              <a href="https://facebook.com" aria-label="Visit our facebook">
+                <img src="assets/logo-facebook.svg" alt="Facebook icon" />
+              </a>
+            </li>
+            <li>
+              <a href="https://linkedin.com" aria-label="Visit our linkedIn">
+                <img src="assets/logo-linkedin.svg" alt="Linkedin icon" />
+              </a>
+            </li>
+            <li>
+              <a href="https://instagram.com" aria-label="Visit our instagram">
+                <img src="assets/logo-instagram.svg" alt="Instagram icon" />
+              </a>
+            </li>
+          </ul>
+        </section>  
+      </div>
     </footer>
   </body>
 </html>
