add media querys

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
             alt="Astronaut poster"
           />
           <h2>Astronaut</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore explicabo nulla, veritatis consequuntur corporis nam!
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore
+            explicabo nulla, veritatis consequuntur corporis nam!
           </p>
           <button aria-label="Add astronaut to cart">Oh, take my money!</button>
         </article>
@@ -38,7 +40,9 @@
         <article class="product-card" id="ninja">
           <img class="poster-pic" src="assets/char-2.png" alt="Ninja poster" />
           <h2>Ninja</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis neque recusandae, aperiam numquam iure ipsa.
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis
+            neque recusandae, aperiam numquam iure ipsa.
           </p>
           <button aria-label="Add ninja to cart">Oh, take my money!</button>
         </article>
@@ -46,7 +50,9 @@
         <article class="product-card" id="nerd">
           <img class="poster-pic" src="assets/char-3.png" alt="Nerd poster" />
           <h2>Nerd</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure repudiandae aliquam eius aut. Temporibus, deleniti.
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure
+            repudiandae aliquam eius aut. Temporibus, deleniti.
           </p>
           <button aria-label="Add nerd to cart">Oh, take my money!</button>
         </article>
@@ -58,7 +64,9 @@
             alt="Doctor poster"
           />
           <h2>Läkare</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur ipsum laboriosam placeat sed numquam in?
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur
+            ipsum laboriosam placeat sed numquam in?
           </p>
           <button aria-label="Add doctor to cart">Oh, take my money!</button>
         </article>
@@ -70,7 +78,9 @@
             alt="Guitarist poster"
           />
           <h2>Gitarrknäppare</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae corrupti enim maxime natus ipsa dolorem.
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae
+            corrupti enim maxime natus ipsa dolorem.
           </p>
           <button aria-label="Add guitarist to cart">Oh, take my money!</button>
         </article>
@@ -82,7 +92,9 @@
             alt="Snorkeler poster"
           />
           <h2>Snorklare</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, cupiditate neque? Itaque eum natus veritatis?
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam,
+            cupiditate neque? Itaque eum natus veritatis?
           </p>
           <button aria-label="Add snorkeler to cart">Oh, take my money!</button>
         </article>
@@ -91,7 +103,8 @@
           <img class="poster-pic" src="assets/char-5.png" alt="Clown poster" />
           <h2>Clown</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. At et obcaecati earum laudantium? Dolores, illo?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. At et
+            obcaecati earum laudantium? Dolores, illo?
           </p>
           <button aria-label="Add clown to cart">Oh, take my money!</button>
         </article>
@@ -100,7 +113,8 @@
           <img class="poster-pic" src="assets/char-6.png" alt="Police poster" />
           <h2>Polis</h2>
           <p>
-            Lorem ipsum dolor sit amet, adipisicing elit. Voluptate necessitatibus praesentium consequatur. Tenetur, ipsam quaerat.
+            Lorem ipsum dolor sit amet, adipisicing elit. Voluptate
+            necessitatibus praesentium consequatur. Tenetur, ipsam quaerat.
           </p>
           <button aria-label="Add police to cart">Oh, take my money!</button>
         </article>
@@ -108,7 +122,9 @@
         <article class="product-card" id="fairy">
           <img class="poster-pic" src="assets/char-8.png" alt="Fairy poster" />
           <h2>Fe</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet atque eligendi debitis, provident distinctio et.
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet
+            atque eligendi debitis, provident distinctio et.
           </p>
           <button aria-label="Add fairy to cart">Oh, take my money!</button>
         </article>
@@ -121,7 +137,8 @@
           />
           <h2>Fotograf</h2>
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor tempora possimus, harum impedit nesciunt itaque!
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor
+            tempora possimus, harum impedit nesciunt itaque!
           </p>
           <button aria-label="Add photographer to cart">
             Oh, take my money!
@@ -136,7 +153,8 @@
           />
           <h2>Personlig tränare</h2>
           <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos inventore deserunt enim quod aspernatur aliquid.
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos
+            inventore deserunt enim quod aspernatur aliquid.
           </p>
           <button aria-label="Add personal trainer to cart">
             Oh, take my money!
@@ -189,7 +207,7 @@
               </a>
             </li>
           </ul>
-        </section>  
+        </section>
       </div>
     </footer>
   </body>
